[Finished #79376308] - Fix Offer Detail Modal on Mobile
Reduced spacing between h1 and h2 on the mobile.
Added overflow: hidden; to remove small scroll from header section of the modal.

--- a/web/knotis/contrib/layout/static/knotis/layout/css/screen.css
+++ b/web/knotis/contrib/layout/static/knotis/layout/css/screen.css
@@ -2595,6 +2595,7 @@ section.welcomeModal h1 {
 
     .offerHero {
 	margin-bottom: 0;
+	overflow: hidden;
     }
     
     .offerDetails {
@@ -2657,6 +2658,10 @@ section.welcomeModal h1 {
 
     .offers-hero h1 {
 	width: auto;
+    }
+
+    .offerHero h2 {
+	top: 60px;
     }
 
     .passportTile .passport-buy {
